--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -999,7 +999,10 @@
                 magit-insert-unpushed-to-pushremote
                 magit-insert-unpushed-to-upstream-or-recent
                 magit-insert-unpulled-from-pushremote
-                magit-insert-unpulled-from-upstream)))
+                magit-insert-unpulled-from-upstream))
+        (setq magit-diff-auto-show nil)
+        (add-hook 'git-commit-mode-hook (lambda () (save-selected-window (magit-process)))))
+
 
       (use-package diff-hl
         :ensure t
