--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -749,7 +749,8 @@
         :custom ((corfu-auto t)
                  (corfu-auto-prefix 1)
                  (corfu-auto-delay 0)
-                 (corfu-cycle t))
+                 (corfu-cycle t)
+                 (text-mode-ispell-word-completion nil))
         :init
         (global-corfu-mode)
         (corfu-popupinfo-mode))
